--- a/liga-futeba/src/main/resources/application-integrationtest.properties
+++ b/liga-futeba/src/main/resources/application-integrationtest.properties
@@ -34,3 +34,6 @@ hibernate.hbm2ddl.auto=create-drop
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#Wiremock config
+service.cep.endpoint=http://localhost:8082/ws/
