Tests, controllers, views improvement

--- a/liga-futeba/src/main/resources/application.properties
+++ b/liga-futeba/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #Wiremock config
 #service.cep.endpoint = https://viacep.com.br/ws/
 #server.port = 8080
+
+spring.view.prefix: /WEB-INF/jsp/
+spring.view.suffix: .jsp
