--- a/liga-futeba/src/main/resources/application-integrationtest.properties
+++ b/liga-futeba/src/main/resources/application-integrationtest.properties
@@ -1,10 +1,10 @@
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-#spring.datasource.url = jdbc:mysql://localhost:3306/liga_futeba
-spring.datasource.url = jdbc:h2:mem:test
-#spring.datasource.username = root
-#spring.datasource.password = futeba
+spring.datasource.url = jdbc:mysql://localhost:3306/liga_futeba
+#spring.datasource.url = jdbc:h2:mem:test
+spring.datasource.username = root
+spring.datasource.password = futeba
 
 jdbc.driverClassName=org.h2.Driver
 jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
@@ -13,7 +13,7 @@ jdbc.pass=sa
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
 
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
