--- a/liga-futeba/src/main/resources/application.properties
+++ b/liga-futeba/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
 spring.datasource.url = jdbc:mysql://localhost:3306/liga_futeba
-spring.datasource.username = root
+spring.datasource.username = futeba
 spring.datasource.password = futeba
 
 # Keep the connection alive if idle for a long time (needed in production)
@@ -13,7 +13,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
