--- a/liga-futeba/src/main/resources/application-integrationtest.properties
+++ b/liga-futeba/src/main/resources/application-integrationtest.properties
@@ -23,7 +23,7 @@ hibernate.hbm2ddl.auto=update
 #spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
