--- a/liga-futeba/src/main/resources/application.properties
+++ b/liga-futeba/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://localhost:3306/liga_futeba
-spring.datasource.username = futeba
+spring.datasource.url=jdbc:mysql://localhost:3306/liga_futeba?createDatabaseIfNotExist=true
+spring.datasource.username = root
 spring.datasource.password = futeba
 
 # Keep the connection alive if idle for a long time (needed in production)
