--- a/liga-futeba/docker-compose.yml
+++ b/liga-futeba/docker-compose.yml
@@ -1,14 +1,12 @@
-version: '3.1'
+version: "3.8"
 services:
-  db:
-    image: mariadb:10.5.8
-    container_name: mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
+  mysql:
+    container_name: mycontainername
+    image: mysql/mysql-server:8.0.23
     ports:
-    - "3306:3306"
-    volumes:
-      - devdojo_data:/var/lib/mysql
-
-volumes:
-  devdojo_data:
+      - "33061:3306"
+    environment:
+        - "MYSQL_DATABASE=homestead"
+        - "MYSQL_USER=homestead"
+        - "MYSQL_PASSWORD=secret"
+        - "MYSQL_ROOT_PASSWORD=secret"
