--- a/liga-futeba/src/main/resources/application.yml
+++ b/liga-futeba/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/liga_futeba?createDatabaseIfNotExist=true
-    username: root
-    password: root
+    url: jdbc:mysql://localhost:3306/homestead?createDatabaseIfNotExist=true
+    username: homestead
+    password: secret
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
 
 logging:
   level:
