--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,13 @@ before_script:
 build-docker:
   stage: build
   script:
-  - echo "gala na rodolpha"
   - docker build -t futeba-imagem .
   - docker tag futeba-imagem dmiranda83/futeba-imagem:latest
   - docker push dmiranda83/futeba-imagem:latest
+
+build-project:
+  stage: build
+  tags:
+  - executor-tarefas
+  script:
+  - echo "gala runner"
